--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8"
+<meta charset="UTF-8">
 <!--Responsive Design-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--Custom CSS-->
+<link rel="stylesheet" href="css/styles.css">
 <!--CDN Bootstrap-->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!--CDN FontAwesome-->
@@ -13,13 +15,22 @@
 <title>Feedzoverso</title>
 </head>
 <body>
-
-<h1>Feedzoverso</h1>
-<p>Welcome to the Feedz Universe.</p>
+	<div class="topnav">
+		<a class="active" href="#home">Home</a>
+		<a href="https://www.twitter.com/FeedzOneTV">Twitter</a>
+		<a href="https://www.twitch.tv/feedzonetv">Twitch</a>
+		<a href="https://www.youtube.com/channel/UCR49N6zJwTKV_KLA3upVVpQ">Youtube</a>
+		<a href="https://www.instagram.com/feedzonetv/">Instagram</a>
+		<a href="https://www.facebook.com/FeedzDesigns">Facebook</a>
+	  </div>
+<p class="centrado">Welcome to the Feedz Universe.</p>
+<header class="page-header">
+	<h1>Feedzoverso</h1>
+</header>
 <section>
 	<article>
-		<h2>Hobbies</h2>
-		<p>Hi there!!, on this page I will tell you a little about my hobbies:D</p>
+		<h2 class="centrado">Hobbies</h2>
+		<p class="centrado">Hi there!!, on this page I will tell you a little about my hobbies:D</p>
 	</article>
 </section>
 
