--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 </head>
 <body>
 	<div class="topnav">
-		<a class="active" href="#home">Home</a>
+		<a class="active" href="index.html">Home</a>
 		<a href="https://www.twitter.com/FeedzOneTV">Twitter</a>
 		<a href="https://www.twitch.tv/feedzonetv">Twitch</a>
 		<a href="https://www.youtube.com/channel/UCR49N6zJwTKV_KLA3upVVpQ">Youtube</a>
 		<a href="https://www.instagram.com/feedzonetv/">Instagram</a>
 		<a href="https://www.facebook.com/FeedzDesigns">Facebook</a>
+		<i class="fa-solid fa-circle-camera"></i>
 	  </div>
 <p class="centrado">Welcome to the Feedz Universe.</p>
 <header class="page-header">
