agregando musica y memes
se agregaron dos memes y un link de deezer

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
 		<h2 class="centrado">Hobbies</h2>
 		<p class="centrado">Hi there!!, on this page I will tell you a little about my hobbies:D</p>
 	</article>
+	<header>
+		<h2>Mis Hobbies :D</h2>
+		<section>
+			<h3>Musica</h3>
+			<div>
+				<iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/101215846" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
+			</div>
+		</section>
+		</header>
 </section>
 
 </body>
