--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react-is/0.0.0-experimental-8fce11699-20220316/umd/react-is.production.min.js" integrity="sha512-NQfzurHMH668fWCZsHWuaNRNhtc7hLksb4xfisJ1Jx8oLa2bxoxnWSuAOekV6Hr0+dd5ydaJSwyS67Qv4wKzdQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <title>Feedzoverso</title>
 </head>
-<body>
+<body class="centrado">
 	<div class="topnav">
 		<a class="active" href="index.html">Home</a>
 		<a href="https://www.twitter.com/FeedzOneTV">Twitter</a>
@@ -34,11 +34,14 @@
 		<p class="centrado">Hi there!!, on this page I will tell you a little about my hobbies:D</p>
 	</article>
 	<header>
-		<h2>Mis Hobbies :D</h2>
-		<section>
-			<h3>Musica</h3>
-			<div>
-				<iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/101215846" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
+		<h2>My Hobbies :D</h2>
+		<section class="centrado">
+			<h3>Music</h3>
+			<div class="centrado">
+				<iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/101215846" width="75%" height="250" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
+				<br>
+				<br>
+				<iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/1195560" width="75%" height="250" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
 			</div>
 		</section>
 		</header>
