tratando de usar embeding
tratando de usar embeeding on un video de twitch

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 				<br>
 				<iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/1195560" width="75%" height="250" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
 			</div>
+			<h3>Videos</h3>
+				<div>
+					<iframe src="https://player.twitch.tv/?video=v1433072784&parent=streamernews.example.com&autoplay=false" height="720" width="1280" allowfullscreen></iframe>
+				</div>
 		</section>
 		</header>
 </section>
