probando con el embeding con youtube
se cambió la idea de usar el video embebido de twitch por youtube

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</div>
 			<h3>Videos</h3>
 				<div>
-					<iframe src="https://player.twitch.tv/?video=v1433072784&parent=streamernews.example.com&autoplay=false" height="720" width="1280" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/OOH4IabFTlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 		</section>
 		</header>
