--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!--CDN React.js-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react-is/0.0.0-experimental-8fce11699-20220316/umd/react-is.production.min.js" integrity="sha512-NQfzurHMH668fWCZsHWuaNRNhtc7hLksb4xfisJ1Jx8oLa2bxoxnWSuAOekV6Hr0+dd5ydaJSwyS67Qv4wKzdQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!--React components-->
+<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js" crossorigin></script>
+
+
 <script src="script.js" type="js/script.js"></script>
 <title>Feedzoverso</title>
 </head>
