--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <!--CDN React.js-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react-is/0.0.0-experimental-8fce11699-20220316/umd/react-is.production.min.js" integrity="sha512-NQfzurHMH668fWCZsHWuaNRNhtc7hLksb4xfisJ1Jx8oLa2bxoxnWSuAOekV6Hr0+dd5ydaJSwyS67Qv4wKzdQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!--React components-->
-<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-<script src="https://unpkg.com/@babel/standalone/babel.min.js" crossorigin></script>
+<script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin ></script>
+<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin ></script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
 
 <script src="script.js" type="js/script.js"></script>
@@ -61,47 +61,13 @@
 			<div>
 				
 			</div>
-			<h3>Lets Play tic tac toe!</h3>
-			<div>
-				<div id="errors" style="
-				  background: #c00;
-				  color: #fff;
-				  display: none;
-				  margin: -20px -20px 20px;
-				  padding: 20px;
-				  white-space: pre-wrap;
-				"></div>
-				<div id="root"></div>
-				<script>
-				window.addEventListener('mousedown', function(e) {
-				  document.body.classList.add('mouse-navigation');
-				  document.body.classList.remove('kbd-navigation');
-				});
-				window.addEventListener('keydown', function(e) {
-				  if (e.keyCode === 9) {
-					document.body.classList.add('kbd-navigation');
-					document.body.classList.remove('mouse-navigation');
-				  }
-				});
-				window.addEventListener('click', function(e) {
-				  if (e.target.tagName === 'A' && e.target.getAttribute('href') === '#') {
-					e.preventDefault();
-				  }
-				});
-				window.onerror = function(message, source, line, col, error) {
-				  var text = error ? error.stack || error : message + ' (at ' + source + ':' + line + ':' + col + ')';
-				  errors.textContent += text + '\n';
-				  errors.style.display = '';
-				};
-				console.error = (function(old) {
-				  return function error() {
-					errors.textContent += Array.prototype.slice.call(arguments).join(' ') + '\n';
-					errors.style.display = '';
-					old.apply(this, arguments);
-				  }
-				})(console.error);
-				</script>
-			</div>
+			<h3>Welcome!</h3>
+			<script type="text/babel" src="script.js"></script>
+			<script type="text/babel" src="button.js"></script>
+			
+			<script type="text/babel">
+				ReactDOM.render(<WelcomeBack />, document.querySelector(".welcome-back"));
+			</script>
 		</section>
 		</header>
 </section>
