intentando hacer funcionar react.js
no se pudo hacer funcionar react js

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <script src="script.js" type="js/script.js"></script>
 <title>Feedzoverso</title>
 </head>
-<body class="centrado">
+<body class="centrado body">
 	<div class="topnav">
 		<a class="active" href="index.html">Home</a>
 		<a href="https://www.twitter.com/FeedzOneTV">Twitter</a>
@@ -31,9 +31,13 @@
 		<a href="https://www.facebook.com/FeedzDesigns">Facebook</a>
 		<i class="fa-solid fa-circle-camera"></i>
 	  </div>
+<section>
+<img class="bannerimage" src="img/header.jpg" height="250" alt="header" />
 <p class="centrado">Welcome to the Feedz Universe.</p>
 <header class="page-header">
-	<h1>Feedzoverso</h1>
+</section>
+
+<h1>Feedzoverso</h1>
 </header>
 <section>
 	<article>
@@ -43,27 +47,40 @@
 	<header>
 		<h2>My Hobbies :D</h2>
 		<section>
-			<h3>Music</h3>
-			<div>
-				<iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/101215846" width="75%" height="250" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
-				<br>
-				<br>
-				<iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/1195560" width="75%" height="250" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
-			</div>
-			<h3>Videos</h3>
-			<div>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/OOH4IabFTlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<br>
-				<br>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/smCMN5TM0T4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-			<h3>Images</h3>
-			<div>
-				
-			</div>
+			<article>
+				<h3>Music <i class="fa-solid fa-music"></i></h3>
+				<div>
+					<iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/101215846" width="75%" height="250" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
+					<br>
+					<br>
+					<iframe title="deezer-widget" src="https://widget.deezer.com/widget/dark/track/1195560" width="75%" height="250" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe>
+				</div>
+			</article>
+		</section>	
+		<section>	
+			<article>
+				<h3>Videos   <i class="fa-brands fa-youtube"></i></h3>
+					<div>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/OOH4IabFTlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<br>
+						<br>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/smCMN5TM0T4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+			</article>
+		</section>
+		<section>	
+			<article>
+				<h3>Images</h3>
+				<p>Acento porque s&iacute; xD</p>
+				<div>
+					<img src="img/img1.jpg" width="250" height="250" alt="image 1" />
+					<img src="img/img2.jpg" width="250" height="250" alt="image 2" />
+				</div>
+			</article>
+		</section>
 			<h3>Welcome!</h3>
-			<script type="text/babel" src="script.js"></script>
-			<script type="text/babel" src="button.js"></script>
+			<script type="text/babel" src="js/script.js"></script>
+			<script type="text/babel" src="js/button.js"></script>
 			
 			<script type="text/babel">
 				ReactDOM.render(<WelcomeBack />, document.querySelector(".welcome-back"));
@@ -71,6 +88,35 @@
 		</section>
 		</header>
 </section>
-
+<footer>
+      <div id="final">
+        <div>
+          <p>
+            Correos: 
+            <ul> 
+              <li>thekubsnyt@gmail.com</li> 
+              <li>erick.paredes@uabc.edu.mx</li>  
+            </ul>
+          </p>
+          </div>
+          <div id="prueba">
+          <p> 
+            LinkedIn:
+            https://www.linkedin.com/in/erick-miguel-paredes-ortega-06243a186/ 
+          </p>
+          <p> 
+            GitHub:
+            https://github.com/FeedzOne 
+          </p>
+          <p>
+            Telefono: (646)1857563
+          </p>
+        </div>
+        <div id="final2">
+          <p>Erick Miguel Paredes Ortega - 350413 </p>
+          <p>2022</p>
+        </div>
+      </div>
+      </footer>
 </body>
 </html>
