--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<script type="text/babel" src="js/button.js"></script>
 			
 			<script type="text/babel">
-				ReactDOM.render(<WelcomeBack />, document.querySelector(".welcome-back"));
+				ReactDOM.render(<script />, document.querySelector(".welcome-back"));
 			</script>
 		</section>
 		</header>
